# KlippAi

./: README.md  pyproject.toml
pi_ai_assistant/: __init__.py  cli.py  config.py  moonraker.py
pi_ai_assistant/providers/: base.py  factory.py  huggingface.py  llamacpp.py  ollama.py  openai_provider.py
scripts/: install_pi.sh  uninstall_pi.sh
